--- a/jsconfig.json
+++ b/jsconfig.json
@@ -20,5 +20,9 @@
                 "./commons/*"
             ]
         } 
-    }
+    },
+    "exclude": [
+        "node_modules",
+        "build"
+    ]
 }
