--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "styled-components": "^5.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "eslint": "eslint --ext .jsx,.js src"
   },
   "eslintConfig": {
     "extends": "react-app"
